--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 matrix-nio = "^0.24.0"
 peewee = "^3.17.5"
+tomli-w = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
