--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-matrix-nio = "^0.24.0"
+matrix-nio = "^0.25.0rc3"
 peewee = "^3.17.5"
 tomli-w = "^1.0.0"
 
